force-app/main/default/objects/Product2/fields/AdjustmentPercent__c.field-meta.xml
<CustomField>
    <fullName>AdjustmentPercent__c</fullName>
    <label>Adjustment Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>