force-app/main/default/objects/Product2/fields/Cloud_Support__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Support__c</fullName>
    <label>Cloud Support</label>
    <type>TextArea</type>
</CustomField>