force-app/main/default/objects/Product2/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>