force-app/main/default/objects/Product2/fields/isDiscountedAmount__c.field-meta.xml
<CustomField>
    <fullName>isDiscountedAmount__c</fullName>
    <formula>NOT( Adjustment_Amount__c = 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isDiscountedAmount</label>
    <type>Checkbox</type>
</CustomField>