force-app/main/default/objects/Product2/fields/Memory__c.field-meta.xml
<CustomField>
    <fullName>Memory__c</fullName>
    <label>Memory</label>
    <type>TextArea</type>
</CustomField>