force-app/main/default/objects/Product2/fields/Processor__c.field-meta.xml
<CustomField>
    <fullName>Processor__c</fullName>
    <label>Processor</label>
    <type>TextArea</type>
</CustomField>