force-app/main/default/objects/Product2/fields/Product_Term__c.field-meta.xml
<CustomField>
    <fullName>Product_Term__c</fullName>
    <label>Product Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>