force-app/main/default/objects/Product2/fields/Promoted_Product__c.field-meta.xml
<CustomField>
    <fullName>Promoted_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Promoted Product</label>
    <type>Checkbox</type>
</CustomField>