force-app/main/default/objects/Product2/fields/Shipping_Available__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Available__c</fullName>
    <label>Shipping Available</label>
    <length>35</length>
    <type>Text</type>
</CustomField>