force-app/main/default/objects/Product2/fields/Support_Type__c.field-meta.xml
<CustomField>
    <fullName>Support_Type__c</fullName>
    <label>Support Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>